Add [POST]'/personalPage' so that frontend could get pictures that are set to public
